attempt to fix navbar buttons on IE

--- a/Public/CSS/persistent_tab.css
+++ b/Public/CSS/persistent_tab.css
@@ -24,6 +24,7 @@ body
 { 
     padding-left: 90px;
     width: 1200px; 
+    height: 92px;
     margin: auto; 
     text-align: left;
     
